trunk/Archive2/2b/f2704f287da3d0/output
main.cpp:10:1: error: elaborated-type-specifier for a scoped enum must not use the 'class' keyword
 enum class altitude : cUff
 ^
main.cpp:10:12: error: use of enum 'altitude' without previous declaration
 enum class altitude : cUff
            ^
main.cpp:10:21: error: expected unqualified-id before ':' token
 enum class altitude : cUff
                     ^
main.cpp: In function 'int main()':
main.cpp:24:5: error: 'altitude' was not declared in this scope
     altitude a;
     ^
main.cpp:24:14: error: expected ';' before 'a'
     altitude a;
              ^
main.cpp:25:5: error: 'a' was not declared in this scope
     a = altitude::low;
     ^
main.cpp:25:9: error: 'altitude' is not a class, namespace, or enumeration
     a = altitude::low;
         ^
